--- a/WD Content/Base.lproj/Main.storyboard
+++ b/WD Content/Base.lproj/Main.storyboard
@@ -4,7 +4,6 @@
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
-        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12089"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -117,7 +116,14 @@
                             <outlet property="delegate" destination="B0v-aV-5eU" id="tsq-6T-KI5"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" id="5un-LQ-4Zj"/>
+                    <navigationItem key="navigationItem" id="5un-LQ-4Zj">
+                        <barButtonItem key="leftBarButtonItem" image="add" id="MMk-ly-FY4">
+                            <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            <connections>
+                                <action selector="addManual:" destination="B0v-aV-5eU" id="l5R-xD-bC8"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                     <connections>
                         <segue destination="ZZ0-d7-6Dr" kind="show" identifier="showDevice" id="G6U-WW-mhc"/>
                     </connections>
